tests/error/invalid_switch.gw
// [contains] conditional must be of type
switch(NULL){}
